--- a/style.css
+++ b/style.css
@@ -1,30 +1,42 @@
 
-.heading
-{
-font-size: 23px;
-width: 100%;
-margin: 0px;
-background-color: #524652;
-color:white;
+body{
+
+    background-size:cover;
+    background-position: center;
+    
 }
 
-#status, #numobjects, #start_mod
+
+.heading{
+
+    font-size: 23px;
+    width: 100%;
+    margin: 0px;
+    background-color: #afb3e3;
+    color:white;
+
+}
+
+
+.anchor{
+
+background-color: white;
+height:30px;
+width:50px;
+font-size: 28px;
+
+}
+
+#status, #objects
 {
 font-size: 18px;
 background-color:#d4c5d4;
 }
 
-body{
 
-background-size:cover;
-background-position: center;
+#canvas {
 
-}
+background-color: white;
+border: solid black 5px;
 
-canvas{
-
-box-shadow: 10px 10px 10px gray;
-border-radius: 10px;
-background-color: #524652;
-margin-top: 30px;
 }
